# fdtd_parallel

./: CMakeLists.txt  README.md
include/: geometry.h  materials.h  pml.h  sources.h  types.h  utils.h
src/: geometry.cpp  main.cpp  materials.cpp  pml.cpp  sources.cpp  utils.cpp
